--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,21 @@
+# laczenie z baza
+spring.datasource.url=jdbc:mysql://localhost:3306/student_tracker
+spring.datasource.username=root
+spring.datasource.password=
+
+# wylaczenie spring boot baneru
+spring.main.banner-mode=off
+
+# pokazywanie tylko logow (warning i errorow)
+logging.level.root=warn
+
+# dociaganie danych leniwie
+# czyli kiedy potrzebuje np. danego controllera czy componentu
+# stworzony on sie dopiero przed wylowanie np. getMapping (GET)
+# @Lazy - do danego np. componentu , a ponizszy przyklad gdy chcemy dla calego projektu
+# ma to pewne minus przy np. dzialaniu w sieci
+spring.main.lazy-initialization=true
+
 # endpoints - "*" - wszystkie
 # mozna tez ustawic konkretne
 management.endpoints.web.exposure.include=*
