--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,14 @@ spring.datasource.url=jdbc:mysql://localhost:3306/student_tracker
 spring.datasource.username=root
 spring.datasource.password=
 
+# logs database
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.orm.jdbc.bind=trace
+
+
+# auto create the tables
+spring.jpa.hibernate.ddl-auto=update
+
 # wylaczenie spring boot baneru
 spring.main.banner-mode=off
 
