--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # laczenie z baza
-spring.datasource.url=jdbc:mysql://localhost:3306/student_tracker
+#spring.datasource.url=jdbc:mysql://localhost:3306/student_tracker
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory
 spring.datasource.username=root
 spring.datasource.password=
 
