--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,7 @@ logging.level.root=warn
 # stworzony on sie dopiero przed wylowanie np. getMapping (GET)
 # @Lazy - do danego np. componentu , a ponizszy przyklad gdy chcemy dla calego projektu
 # ma to pewne minus przy np. dzialaniu w sieci
-spring.main.lazy-initialization=true
+#spring.main.lazy-initialization=true
 
 # endpoints - "*" - wszystkie
 # mozna tez ustawic konkretne
